# SD_Projekt_2

./: CMakeLists.txt
include/: HeapPriorityQueue.h  ListPriorityQueue.h  PriorityQueue.h
src/: HeapPriorityQueue.cpp  ListPriorityQueue.cpp  reserch.cpp  simulator.cpp
